Upgrade OrientDB from 2.1.25 to 3.2.51 (#166)
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: vharseko <6818498+vharseko@users.noreply.github.com>
Co-authored-by: copilot <copilot@github.com>
Co-authored-by: Valera V Harseko <vharseko@3a-systems.ru>